# behind-bars-bot

./: .templateenv  DEPLOYMENT.md  EMBEDDINGS.md  README.md  config.toml  pyproject.toml
.embeddings_cache/: embedding_bail_system_md_0_4462472b6ad1313d.json  embedding_bail_system_md_1_a463da9c98d05ba0.json  embedding_bail_system_md_2_09ffe76730e2954c.json  embedding_bail_system_md_3_66332d820f43da37.json  embedding_bail_system_md_4_bb37f131bdf72c5c.json  embedding_bail_system_md_5_5b55b5799a40dab0.json  embedding_bail_system_md_6_5fdc6345c3fe4e4c.json  embedding_bail_system_md_7_077dd1c7d0922f6c.json  embedding_bail_system_md_8_f5faf9359a14f080.json  embedding_bail_system_md_9_35500a79015da012.json  embedding_crime_tracking_md_0_bf935b8ee72fa973.json  embedding_crime_tracking_md_10_dba7d5d6d7eb6391.json  embedding_crime_tracking_md_11_5f748f8b917bd177.json  embedding_crime_tracking_md_12_7b4b783ba4e9d48c.json  embedding_crime_tracking_md_13_9e53ffe875fd461c.json  embedding_crime_tracking_md_14_b89b1993144c4769.json  embedding_crime_tracking_md_15_0ecc99e799aee80d.json  embedding_crime_tracking_md_16_8fd24158f92ed317.json  embedding_crime_tracking_md_1_5388dfd0ea7d0a23.json  embedding_crime_tracking_md_2_4412aae404445c05.json  embedding_crime_tracking_md_3_f1b43b356c41d32d.json  embedding_crime_tracking_md_4_50b8764dd08a6bd4.json  embedding_crime_tracking_md_5_2c6487bace59e667.json  embedding_crime_tracking_md_6_fd469bd70f87be5d.json  embedding_crime_tracking_md_7_718255d521972f8c.json  embedding_crime_tracking_md_8_1885fca146136783.json  (+103 more)
behind_bars_bot/: __init__.py  (+4 more)
(+8 files in other folders)
