[project]
name = "behind-bars-bot"
version = "0.1.0"
description = "Discord bot for helping users understand the Behind Bars mod for Schedule I."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AccuralAI Maintainers" }]
dependencies = [
    "discord.py>=2.3",
    "accuralai-discord",
    "accuralai-core",
    "accuralai-cache",
    "accuralai-rag",
    "pydantic>=2.5",
    "aiohttp>=3.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-anyio",
    "pytest-mock",
]

[project.scripts]
"behind-bars-bot" = "behind_bars_bot.bot:main"

[project.urls]
homepage = "https://accural-ai.web.app/"
repository = "https://github.com/AccuralAI/behind-bars-bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

